
executable("drawing") {
  sources = [
    "main.cc",
    "drawing_window.cc",
    "drawing_view.cc",
    "config_node.cc",
    "drawing.cc",
    "timer_helper.cc",
    "timer_helper.h",
    "show_animation.cc",
    "show_animation.h",
  ]
  deps = [
    "//nelf",
    "//azer/math",
    "//azer/util/xml",
  ]
}